Fix the alignment of the toggles

--- a/assests/scss/_tor.scss
+++ b/assests/scss/_tor.scss
@@ -37,6 +37,12 @@
     color: $white;
 }
 
+// toggle buttons for animations
+
+.toggle {
+  vertical-align: middle;
+}
+
 // Define darker background
 .bg-darker{
   background-color: $purple-darker;
